[tool.poetry]
name = "audio"
version = "0.1.0"
description = ""
authors = ["Tony Troeff <tonyslav_troeff@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
jupyter = "1.0.0"
matplotlib = "3.8.0"
numpy = "1.26.0"
scipy = "1.11.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
